<resources>
    <string name="app_name">BabyNeedsApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_item">Enter Item</string>
    <string name="enter_quantity">add quantity</string>
    <string name="enter_color">enter color</string>
    <string name="enter_size">enter size</string>
    <string name="save_button">SAVE</string>
    <string name="babayneeds">babayneeds</string>
    <string name="UPDATE">Update</string>
</resources>