<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:cardBackgroundColor="#FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_surface"
            android:padding="25dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/baby_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/enter_item" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/baby_item"
                android:inputType="number"
                android:hint="@string/enter_quantity" />

            <EditText
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quantity"
                android:hint="@string/enter_color" />

            <EditText
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/color"
                android:inputType="number"
                android:hint="@string/enter_size" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size"
                android:layout_marginEnd="10dp"
                android:background="@color/teal_200"
                android:text="@string/save_button"
                android:textStyle="bold"
                app:backgroundTint="@color/purple_700" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>





</LinearLayout>